Bug 1570684 - Don't access MediaStreamTrack::mStream after the track has ended. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D40397